--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^6.0.0",
+        "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
+        "jsonwebtoken": "^9.0.3",
         "mongoose": "^9.1.6",
+        "nodemailer": "^8.0.1",
         "uuid": "^9.0.1"
     },
     "devDependencies": {
